[package]
name = "smartgarden-hardware-control"
version = "0.1.0"
authors = ["Luca.Mueller"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
pickledb = "0.4.1"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
isahc = "1.2"